--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: HyG
-brief-intro: Front-end Dev Engineer
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://gaohaoyang.github.io" # the base hostname & protocol for your site
+title: RANDO BLOG
+brief-intro: A Rando Person
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://genothemundane.carrd.co/" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
 # other links
-twitter_username:
+twitter_username:JTM04535267
 facebook_username: gaohaoyang.water
 github_username:  Gaohaoyang
 email: gaohaoyang126@126.com
@@ -23,7 +23,7 @@ zhihu_username: gaohaoyang
 linkedIn_username: gaohaoyang
 dribbble_username:
 
-description_footer: 本站记录我前端之旅的沿途风景！
+description_footer: I Am High On Sugar
 
 # comments
 # two ways to comment, only choose one, and use your own short name
